--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@zestia/eslint-config": "^5.1.5",
+    "@zestia/prettier-config": "^1.3.1",
+    "@zestia/stylelint-config": "^5.2.1",
+    "@zestia/template-lint-config": "^6.0.7",
     "@babel/core": "^7.22.20",
     "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-proposal-decorators": "^7.22.15",
@@ -55,19 +59,12 @@
     "ember-source": "~5.3.0",
     "ember-template-lint": "^5.11.2",
     "ember-welcome-page": "^7.0.2",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-ember": "^11.11.1",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-qunit": "^8.0.0",
     "loader.js": "^4.7.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
+    "eslint": "^8.49.0",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
     "stylelint": "^15.10.3",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-prettier": "^4.0.2",
     "tracked-built-ins": "^3.2.0",
     "webpack": "^5.88.2"
   },
